--- a/BackendManagement/MainWindow.xaml
+++ b/BackendManagement/MainWindow.xaml
@@ -1,12 +1,121 @@
-﻿<Window x:Class="BackendManagement.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BackendManagement"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="BackendManagement.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:extensions="clr-namespace:BackendManagement.Extensions"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    AllowsTransparency="True"
+    Style="{StaticResource MaterialDesignWindow}"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <materialDesign:ColorZone
+            x:Name="colorZone"
+            Padding="16"
+            Mode="PrimaryLight">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding WindowMaximizeCommand}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+            <DockPanel>
+                <materialDesign:PackIcon
+                    Width="25"
+                    Height="25"
+                    Margin="3,0"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    DockPanel.Dock="Right"
+                    Foreground="White"
+                    Kind="WindowClose">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDown">
+                            <i:InvokeCommandAction Command="{Binding WindowCloseCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </materialDesign:PackIcon>
 
+                <materialDesign:PackIcon
+                    Width="25"
+                    Height="25"
+                    Margin="3,0"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    DockPanel.Dock="Right"
+                    Foreground="White"
+                    Kind="WindowMaximize">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDown">
+                            <i:InvokeCommandAction Command="{Binding WindowMaximizeCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </materialDesign:PackIcon>
+                <materialDesign:PackIcon
+                    Width="25"
+                    Height="25"
+                    Margin="3,0"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    DockPanel.Dock="Right"
+                    Foreground="White"
+                    Kind="WindowMinimize">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDown">
+                            <i:InvokeCommandAction Command="{Binding WindowMinimizeCommand}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </materialDesign:PackIcon>
+                <StackPanel Orientation="Horizontal">
+                    <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
+                    <Button
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="SystemRoleView"
+                        Content="角色" />
+                    <Button
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="SystemUserView"
+                        Content="用户" />
+                    <Button
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="TestView2"
+                        Content="业务测试" />
+
+                </StackPanel>
+                <TextBlock
+                    Margin="16,0,0,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Text="**测试系统" />
+            </DockPanel>
+
+        </materialDesign:ColorZone>
+        <!--<StackPanel Orientation="Horizontal">
+            <Button
+                Command="{Binding NavigateCommand}"
+                CommandParameter="SystemRoleView"
+                Content="角色" />
+            <Button
+                Command="{Binding NavigateCommand}"
+                CommandParameter="SystemUserView"
+                Content="用户" />
+            <Button
+                Command="{Binding NavigateCommand}"
+                CommandParameter="TestView2"
+                Content="业务测试" />
+        </StackPanel>-->
+
+        <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static extensions:PrismManager.MainViewRegionName}" />
     </Grid>
 </Window>
