--- a/BackendManagement.CommonView/Views/AddAndEditUserView.xaml
+++ b/BackendManagement.CommonView/Views/AddAndEditUserView.xaml
@@ -1,22 +1,16 @@
 ﻿<UserControl
-    x:Class="BackendManagement.CommonView.Views.SystemUserView"
+    x:Class="BackendManagement.CommonView.Views.AddAndEditUserView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BackendManagement.CommonView.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="800"
+    Height="600"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <Button Command="{Binding AddUserCommand}" Content="添加用户" />
-            <Button Command="{Binding EditUserCommand}" Content="编辑用户" />
-        </StackPanel>
-
+    <Grid Height="30" Background="Transparent">
+        <Button Content="弹窗345" />
     </Grid>
 </UserControl>
