--- a/BackendManagement.CommonView/Views/AddAndEditUserView.xaml
+++ b/BackendManagement.CommonView/Views/AddAndEditUserView.xaml
@@ -4,13 +4,55 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BackendManagement.CommonView.Views"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="800"
-    Height="600"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:prism="http://prismlibrary.com/"
+    Width="{StaticResource addAndEditUserViewWindowWidth}"
+    Height="{StaticResource addAndEditUserViewWindowHeight}"
+    d:DesignHeight="{StaticResource addAndEditUserViewWindowHeight}"
+    d:DesignWidth="{StaticResource addAndEditUserViewWindowWidth}"
     mc:Ignorable="d">
-    <Grid Height="30" Background="Transparent">
-        <Button Content="弹窗345" />
+    <prism:Dialog.WindowStyle>
+        <Style BasedOn="{StaticResource dialogWindow}" TargetType="Window">
+            <Setter Property="Width" Value="{StaticResource loginWindowWidth}" />
+            <Setter Property="Height" Value="{StaticResource loginWindowHeight}" />
+        </Style>
+    </prism:Dialog.WindowStyle>
+
+
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="50" />
+        </Grid.RowDefinitions>
+        <GroupBox Header="{Binding Title}" Style="{StaticResource MaterialDesignCardGroupBox}">
+            <GroupBox.HeaderTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon
+                            Width="32"
+                            Height="32"
+                            VerticalAlignment="Center"
+                            Kind="Account" />
+                        <TextBlock
+                            Margin="8,0,0,0"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
+                            Text="{Binding}" />
+                    </StackPanel>
+                </DataTemplate>
+            </GroupBox.HeaderTemplate>
+            <Button Content="1212512" />
+        </GroupBox>
+        <StackPanel
+            Grid.Row="1"
+            Margin="5"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button Margin="5,0" Content="确认" />
+            <Button Content="取消" />
+        </StackPanel>
     </Grid>
+
 </UserControl>
