--- a/BackendManagement.CommonView/Views/LoginView.xaml
+++ b/BackendManagement.CommonView/Views/LoginView.xaml
@@ -57,7 +57,8 @@
             </Grid.ColumnDefinitions>
             <Button
                 Grid.Column="0"
-                Margin="8,0,0,0"
+                Width="{StaticResource loginButtonSize}"
+                Height="{StaticResource loginButtonSize}"
                 Command="{Binding LoginCommand}"
                 Style="{StaticResource MaterialDesignFloatingActionLightButton}"
                 ToolTip="登录">
@@ -65,7 +66,8 @@
             </Button>
             <Button
                 Grid.Column="1"
-                Margin="8,0,0,0"
+                Width="{StaticResource loginButtonSize}"
+                Height="{StaticResource loginButtonSize}"
                 Command="{Binding RegisterCommand}"
                 Style="{StaticResource MaterialDesignFloatingActionLightButton}"
                 ToolTip="注册">
@@ -73,7 +75,8 @@
             </Button>
             <Button
                 Grid.Column="2"
-                Margin="8,0,0,0"
+                Width="{StaticResource loginButtonSize}"
+                Height="{StaticResource loginButtonSize}"
                 Command="{Binding CancelCommand}"
                 Style="{StaticResource MaterialDesignFloatingActionLightButton}"
                 ToolTip="取消">
