--- a/BackendManagement/App.xaml
+++ b/BackendManagement/App.xaml
@@ -13,6 +13,7 @@
             <sys:Double x:Key="addAndEditUserViewWindowWidth">800</sys:Double>
             <sys:Double x:Key="addAndEditUserViewWindowHeight">600</sys:Double>
             <sys:Double x:Key="loginPackIconSize">24</sys:Double>
+            <sys:Double x:Key="loginButtonSize">50</sys:Double>
             <Style x:Key="dialogWindow" TargetType="Window">
                 <Setter Property="SizeToContent" Value="WidthAndHeight" />
                 <Setter Property="ResizeMode" Value="NoResize" />
