--- a/BackendManagement/MainWindow.xaml
+++ b/BackendManagement/MainWindow.xaml
@@ -106,6 +106,10 @@
                         Command="{Binding NavigateCommand}"
                         CommandParameter="TestView"
                         Content="业务测试" />
+                    <Button
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="SettingView"
+                        Content="系统设置" />
                 </StackPanel>
             </materialDesign:DrawerHost.LeftDrawerContent>
             <ContentControl prism:RegionManager.RegionName="{x:Static extensions:PrismManager.MainViewRegionName}" />
