--- a/BackendManagement.BusinessView/Views/TestView.xaml
+++ b/BackendManagement.BusinessView/Views/TestView.xaml
@@ -2,6 +2,7 @@
     x:Class="BackendManagement.BusinessView.Views.TestView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BackendManagement.BusinessView.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,6 +10,6 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
-        <Button Content="业务测试页面" />
+        <ScottPlot:WpfPlot x:Name="WpfPlot1" />
     </Grid>
 </UserControl>
