--- a/BackendManagement.CommonView/Views/SettingView.xaml
+++ b/BackendManagement.CommonView/Views/SettingView.xaml
@@ -2,19 +2,79 @@
     x:Class="BackendManagement.CommonView.Views.SettingView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:BackendManagement.CommonView.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:BackendManagement.CommonView.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:materialDesignColors="clr-namespace:MaterialDesignColors;assembly=MaterialDesignColors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <converters:ColorToBrushConverter x:Key="colorToBrushConverter" />
+            <DataTemplate x:Key="SwatchColorTemplate" DataType="{x:Type Color}">
+                <Button
+                    Width="40"
+                    Height="40"
+                    Background="{Binding Converter={StaticResource colorToBrushConverter}}" />
+            </DataTemplate>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Border Background="{DynamicResource MaterialDesignBackground}">
         <GroupBox
             Header="系统设置"
             Style="{StaticResource MaterialDesignGroupBox}"
             UseLayoutRounding="True">
-            <TextBlock Text="My Content" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition />
+
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0">
+                    <Button Command="{Binding LightCommand}" Content="Light" />
+                    <Button Command="{Binding DarkCommand}" Content="Dark" />
+                </StackPanel>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <ItemsControl Grid.Column="0" ItemsSource="{Binding Swatches}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="{x:Type materialDesignColors:ISwatch}">
+                                <Grid>
+                                    <ItemsControl ItemTemplate="{StaticResource SwatchColorTemplate}" ItemsSource="{Binding Lookup.Values, Mode=OneTime}">
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <VirtualizingStackPanel Orientation="Horizontal" />
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                    </ItemsControl>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                    <ItemsControl Grid.Column="1" ItemsSource="{Binding Swatches}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="{x:Type materialDesignColors:ISwatch}">
+                                <Grid>
+                                    <ItemsControl ItemTemplate="{StaticResource SwatchColorTemplate}" ItemsSource="{Binding Lookup.Values, Mode=OneTime}">
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <VirtualizingStackPanel Orientation="Horizontal" />
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                    </ItemsControl>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Grid>
+            </Grid>
         </GroupBox>
     </Border>
 </UserControl>
